--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,19 @@
           "value": "*"
         }
       ]
+    },
+    {
+      "source": "/cursors/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "*"
+        }
+      ]
     }
   ]
 }
